set type to module in package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "send-logs-to-loki",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A GitHub Action to send logs to Loki",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
