--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,16 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Update version in package.json
+        run: |
+          tag=${{ github.event.inputs.tag }}
+          jq --arg tag "$tag" '.version = $tag' package.json > tmp.$$.json && mv tmp.$$.json package.json
+
       - name: Commit and push changes
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add dist
+          git add dist package.json
           git commit -m 'Build action with ncc'
           git tag ${{ github.event.inputs.tag }}
           git push origin ${{ github.event.inputs.tag }}
