Use index.js in dist folder in action.yml

--- a/action.yml
+++ b/action.yml
@@ -14,8 +14,8 @@ inputs:
   additional_labels:
     description: 'Additional labels to be added to the log in logfmt format'
 runs:
-  using: 'node16'
-  main: 'index.js'
+  using: 'node20'
+  main: 'dist/index.js'
 branding:
   icon: 'send'
   color: 'yellow'
