--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,16 +47,19 @@ jobs:
           tag=${{ github.event.inputs.tag }}
           sed -i "s/v[0-9]\+\.[0-9]\+\.[0-9]\+/v$tag/g" README.md
 
-      - name: Commit and push changes
+      - name: Commit changes
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add dist package.json
+          git add dist package.json README.md index.js
           git commit -m 'Build action with ncc'
-          git tag ${{ github.event.inputs.tag }}
-          git push origin main ${{ github.event.inputs.tag }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create a tag and push
+        run: |
+          git tag ${{ github.event.inputs.tag }}
+          git push origin main ${{ github.event.inputs.tag }}
 
       - name: Send Log to Loki
         uses: ./
