--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Aron Hemmes",
   "license": "ISC",
   "dependencies": {
+    "@actions/artifact": "^2.2.1",
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0"
   },
