--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,13 +34,8 @@ jobs:
         run: |
           tag=${{ github.event.inputs.tag }}
           jq --arg tag "$tag" '.version = $tag' package.json > tmp.$$.json && mv tmp.$$.json package.json
-          sed -i "s/shinto-labs\/send-log-to-loki@v\+[0-9]\+\.[0-9]\+\.[0-9]\+/shinto-labs\/send-log-to-loki@v${tag#v}/g" README.md
-          sed -i "s/shinto-labs\/send-log-to-loki@v\+[0-9]\+\.[0-9]\+\.[0-9]\+/shinto-labs\/send-log-to-loki@v${tag#v}/g" index.js
-
-      - name: Update version in README.md
-        run: |
-          tag=${{ github.event.inputs.tag }}
-          sed -i "s/v[0-9]\+\.[0-9]\+\.[0-9]\+/v$tag/g" README.md
+          sed -i "s/shinto-labs\/send-log-to-loki@v[0-9]\+\.[0-9]\+\.[0-9]\+/shinto-labs\/send-log-to-loki@$tag/g" README.md
+          sed -i "s/shinto-labs\/send-log-to-loki@v[0-9]\+\.[0-9]\+\.[0-9]\+/shinto-labs\/send-log-to-loki@$tag/g" index.js
 
       - name: Commit changes
         run: |
