--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,11 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add dist package.json README.md index.js
-          git commit -m 'Build action with ncc'
+          if ! git diff-index --quiet HEAD; then
+            git commit -m 'Release ${{ github.event.inputs.tag }}'
+          else
+            echo "No changes to commit"
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
