--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add dist package.json README.md index.js
+          git add dist package.json package-lock.json README.md index.js
           if ! git diff-index --quiet HEAD; then
             git commit -m 'Release ${{ github.event.inputs.tag }}'
           else
